style: fix overflow issue on mobile

--- a/src/styles/personal-details.css
+++ b/src/styles/personal-details.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   transform-origin: center;
+  overflow: auto;
 }
 
 .personal-details a {
