--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -33,11 +33,20 @@
     --font-size-h2: 2.0rem;
   }
 }
+
 @media (max-width: 460px) {
   :root {
     --font-size-h1: 2.6rem;
     --font-size-h2: 1.8rem;
     --font-size-body: 1.6rem;
+  }
+}
+
+@media (max-width: 360px) {
+  :root {
+    --font-size-h1: 2.2rem;
+    --font-size-h2: 1.6em;
+    --font-size-body: 1.4rem;
   }
 }
 
